--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "svelte-app",
   "version": "1.0.0",
+  "license": "MIT",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.10.1",
-    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup": "^2.10.5",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-node-resolve": "^4.2.3",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-terser": "^5.3.0",
     "svelte": "^3.0.0"
   },
   "dependencies": {
